# greyhound-database

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLEANUP_PLAN.md  DEVELOPMENT.md  FILE_AUDIT.md  MODEL_ANALYSIS.md  README.md  RESTRUCTURING_PLAN.md  SYSTEM_MANUAL.md  TESTING.md  greydb.bat  live_bets.csv  live_bets_summary.csv  live_bets_summary.xlsx  pyproject.toml  remove_paths.txt  requirements.txt  run.py
.claude/: settings.local.json
.github/: copilot-instructions.md
archive/: ALTERNATIVE_STRATEGIES.md  BACKTEST_RESULTS_ANALYSIS.md  BENCHMARK_ADJUSTMENTS_SUMMARY.md  BETFAIR_SETUP_GUIDE.md  BREAKTHROUGH_SUMMARY.md  BULK_IMPORT_UPDATE.md  BULK_IMPORT_USAGE.md  CHANGES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STRATEGY.md  EXACT_CODE_CHANGES.md  FEATURE_ENGINEERING_GUIDE.py  FINAL_RESULTS.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  GUI_INTEGRATION_GUIDE.md  MODEL_IMPROVEMENT_PLAN.md  MODEL_STATUS_REPORT.md  MULTI_RACE_SCRAPING.md  OUTLIER_FILTERING_INVESTIGATION.md  OVERFITTING_ACTION_PLAN.md  OVERFITTING_VALIDATION_REPORT.md  PARALLEL_PROCESSING_UPDATE.md  PHASE_1_RESULTS.md  PRODUCTION_READY.md  QUICK_FIXES.md  QUICK_START.md  README_DEPLOYMENT.md  README_FIXES.md  RETRAINING_RESULTS.md  SCRAPING_GUIDE.md  START_HERE.md  START_HERE.txt  TEST_SCENARIOS_REFERENCE.txt  UPCOMING_BETTING_RACES_GUIDE.md  add_benchmark_columns.py  add_split_columns.py  analyze_api_fields.py  analyze_available_data.py  analyze_confidence.py  (+225 more)
outputs/: backtest_backonly_2025H2.csv  compare_pricecap_layconflict_2025H2.csv  grid_backtest_2025H2.csv  lay_only_conflict_2025H2.csv  (+1 more)
(+466 files in other folders)
